--- a/index.html
+++ b/index.html
@@ -1,38 +1,38 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Remplacer les SKU</title>
-    <style>
-        .tile--container--image {
-            width: 100%;
-        }
-        /* Style minimal pour un bon rendu */
-        input, button {
-            padding: 10px;
-            margin: 10px;
-            width: 100%;
-        }
-        pre {
-            white-space: pre-wrap;
-            word-wrap: break-word;
-        }
-    </style>
-</head>
-<body>
-    <h1>Remplacer les SKU dans le code</h1>
-    <!-- Formulaire pour entrer les SKU sous forme de liste -->
-    <div>
-        <label for="skuList">Entrez vos SKU (séparés par des virgules) :</label>
-        <input type="text" id="skuList" placeholder="Entrez les SKU séparés par des virgules" />
-    </div>
-    <div>
-        <button id="generateBtn">Générer le code</button>
-    </div>
-    <h2>Code généré :</h2>
-    <pre id="outputCode"></pre>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Remplacer les SKU</title>
+        <!-- Lien vers un fichier CSS externe -->
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <h1>Remplacer les SKU dans le code</h1>
+        <!-- Formulaire pour entrer les SKU sous forme de liste -->
+        <div>
+            <label for="skuList">Entrez vos SKU (séparés par des virgules)
+                :</label>
+            <input type="text" id="skuList"
+                placeholder="Entrez les SKU séparés par des virgules" />
+        </div>
+        <div>
+            <button id="generateBtn">Générer le code</button>
+        </div>
+        <div class="codeOutput">
+            <div class="codeFr">
+            <button class="copy-btn" id="copyFrBtn">Copier</button>
+            <h2>Code généré en francais:</h2>
+            <pre id="outputCodeFr"></pre>
+        </div>
+        <div class="codeEn">
+            <button class="copy-btn" id="copyEnBtn">Copier</button>
+            <h2>Code généré en anglais:</h2>
+            <pre id="outputCodeEn"></pre>
+        </div>
+        </div>
+        
 
-    <script src="script.js"></script>
-</body>
+        <script src="script.js"></script>
+    </body>
 </html>
